opam-version: "2.0"
version: "0.1.0"
name: "okyoto"
synopsis: "OCaml bindings for Kyoto Cabinet"
maintainer: "Didier Wenzek <didier.wenzek@acidalie.com>"
authors: ["Didier Wenzek <didier.wenzek@acidalie.com>"]
homepage: "https://github.com/didier-wenzek/ocaml-kyotocabinet"
bug-reports: "https://github.com/didier-wenzek/ocaml-kyotocabinet/issues"
dev-repo: "https://github.com/didier-wenzek/ocaml-kyotocabinet"
license: "GPL"
build: [
  ["jbuilder" "build" "--only" "okyoto" "--root" "." "-j" jobs "@install"]
]
install: [make "install"]
remove: [make "uninstall"]
depends: ["jbuilder"]
