opam-version: "1.2"
version: "0.2"
maintainer: "Didier Wenzek <didier.wenzek@acidalie.com>"
authors: ["Didier Wenzek <didier.wenzek@acidalie.com>"]
homepage: "https://github.com/didier-wenzek/ocaml-kyotocabinet"
bug-reports: "https://github.com/didier-wenzek/ocaml-kyotocabinet/issues"
dev-repo: "https://github.com/didier-wenzek/ocaml-kyotocabinet.git"
license: "GPL"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "dune" {build & >= "1.0"}
]
depexts: [
  [[ "ubuntu"] ["libkyotocabinet-dev"]]
  [[ "debian"] ["libkyotocabinet-dev"]]
  [[ "fedora"] ["kyotocabinet-devel"]]
  [[ "osx" "homebrew"] ["kyoto-cabinet"]]
  [[ "osx" "macports"] ["kyotocabinet"]]
]
