opam-version: "1.2"
version: "0.2.0"
maintainer: "didier.wenzek@acidalie.com"
authors: ["Didier Wenzek"]
homepage: "https://github.com/didier-wenzek/ocaml-kyotocabinet"
bug-reports: "https://github.com/didier-wenzek/ocaml-kyotocabinet/issues"
dev-repo: "https://github.com/didier-wenzek/ocaml-kyotocabinet"
license: "GPL"
build: [
  ["jbuilder" "build" "--only" "okyoto" "--root" "." "-j" jobs "@install"]
]
